@@ -80,8 +80,10 @@ Changes:
   changes size, e.g. on window resizes (sponsored by Novus Partners).
 - Support Infinity/-Infinity for plotting asymptotes by hacking it
   into +/-Number.MAX_VALUE (reported by rabaea.mircea).
-- Support restricting navigate plugin to not pan/zoom an axis (based
+- Support for restricting navigate plugin to not pan/zoom an axis (based
   on patch by kkaefer).
+- Support for providing the drag cursor for the navigate plugin as an
+  option (based on patch by Kelly T. Moore).
 
 - New hooks: drawSeries
 
